Changed mysql to sql server

--- a/TestProject.API/appsettings.json
+++ b/TestProject.API/appsettings.json
@@ -24,6 +24,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=127.0.0.1;userid=root;pwd=;port=3306;database=tbc_test_iz;sslmode=none;Charset=utf8&quot;"
+    "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=TBC_iz;"
   }
 }
